--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -49,8 +49,7 @@
               <h1 class="heading">
                 <i
                   >" The REAL TEST of a HUMAN is NOT what WE KNOW ,<br />BUT it
-                  is....<br />what WE LEARN " </i
-                ><br />
+                  is....<br />what WE LEARN " </i><br />
                 <ion-icon name="star-outline"></ion-icon>
                 <ion-icon name="star-outline"></ion-icon>
                 <ion-icon name="star-outline"></ion-icon>
@@ -58,7 +57,7 @@
               </h1>
             </div>
           </div>
-          <button class="btn"><a href="login.html"> LOGIN </a></button>
+          <button class="btn"><a href="{% url 'home' %}"> LOGIN </a></button>
         </div>
 
         <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
