waves on ground

--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -49,7 +49,9 @@
               <h1 class="heading">
                 <i
                   >" The REAL TEST of a HUMAN is NOT what WE KNOW ,<br />BUT it
-                  is....<br />what WE LEARN " </i><br />
+                  is....<br />what WE LEARN " </i
+                ><br />
+
                 <ion-icon name="star-outline"></ion-icon>
                 <ion-icon name="star-outline"></ion-icon>
                 <ion-icon name="star-outline"></ion-icon>
