--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -37,7 +37,7 @@
             <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="#">Quizz</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="{% url 'contact_us' %}">Contact Us</a></li>
           </ul>
         </nav>
         <!-------nav ends---------->
