--- a/quiz_project/templates/home.html
+++ b/quiz_project/templates/home.html
@@ -36,7 +36,7 @@
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="#">Quizz</a></li>
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
             <li><a href="{% url 'contact_us' %}">Contact Us</a></li>
           </ul>
         </nav>
