--- a/quiz_project/templates/login.html
+++ b/quiz_project/templates/login.html
@@ -36,7 +36,7 @@
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="#">Quizz</a></li>
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </nav>
@@ -58,7 +58,7 @@
   <input id="email"  name="email" type="email" placeholder="Enter email" required>
 <label for="password">Password</label>
   <input id="password"  name="password" type="password" placeholder="Enter password" required>
-  <input type="submit" value="Login" >
+            <button type="submit"> value="Login" </button>
   <a href="#">Lost your password?</a><br>
 </form>
 <p class="para-2">Not have an account? <a href="{% url 'sign-up' %}">Sign Up Here</a></p>
