Google Login Implemented

--- a/quiz_project/templates/index.html
+++ b/quiz_project/templates/index.html
@@ -31,7 +31,7 @@
      {% endfor %}
     {% endif %}
     <div id="upper">
-      <h1>Welcome {{user.name}}, this is the Dashboard now</h1>
+      <h1>Welcome {{user.name}} {{user.email}}, this is the Dashboard now</h1>
 
       <!--
         <ol>
