--- a/quiz_project/templates/signup.html
+++ b/quiz_project/templates/signup.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Sign Up</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
+  <head>
+    <title>login-Page | Quizz</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width" />
+    {% load socialaccount %} {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <!--    Font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/00e297be53.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src=" https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "
+    ></script>
+  </head>
+
+  <body>
     <div class="signup-box">
-        <h1>Sign Up</h1>
-        <h4>It's free and only takes a minute !</h4>
+      <h1>Sign Up</h1>
+      <h4>It's free and only takes a minute !</h4>
 
-        <form style="overflow:scroll;" onsubmit="return checkPassword(this)" method="post" action="{% url 'sign-up' %}">
-            {% csrf_token %}
-<!--            <label>Name</label>-->
-<!--            <input name="name" type="text" placeholder="">-->
-<!--&lt;!&ndash;            <label>Last Name</label>&ndash;&gt;-->
-<!--&lt;!&ndash;            <input name="last_name" type="text" placeholder="">&ndash;&gt;-->
-<!--            <label>Email</label>-->
-<!--            <input name="email" type="email" placeholder="">-->
-<!--            <input name="password" id="password" type="password" placeholder="Password">-->
-<!--            <input name="cpassword" id="cnf" type="password" placeholder="Confirm Password">-->
-<!--            <br>-->
-<!--            <div style="margin-top: 7px;" id="CheckPasswordMatch"></div>-->
-<!--          <br>-->
-<!--            <input type="submit"  value="Submit">-->
-                {{ form.as_p }}
-            <button type="submit">Sign up</button>
-        </form>
-        <script>
-            $(document).ready(function() {
-              $("#cnf").on('keyup', function() {
-                var password = $("#password").val();
-                var confirmPassword = $("#cnf").val();
-                if (password != confirmPassword)
-                  $("#CheckPasswordMatch").html("Password does not match !").css("color", "red");
-                else
-                  $("#CheckPasswordMatch").html("Password matched!").css("color", "green");
-              });
-            });
-        </script>
-        <p>By clicking the Sign Up button, you agree to our <br>
-        <a href="#">Terms and Conditions</a> and <a href="#">Policy and Privacy</a>
-    </p>
-    <p class="para-2">Already have an account? <a href="Login.html">Login here</a></p>
+      <form
+        style="overflow: scroll"
+        onsubmit="return checkPassword(this)"
+        method="post"
+        action="{% url 'sign-up' %}"
+      >
+        {% csrf_token %}
+        <!--            <label>Name</label>-->
+        <!--            <input name="name" type="text" placeholder="">-->
+        <!--&lt;!&ndash;            <label>Last Name</label>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <input name="last_name" type="text" placeholder="">&ndash;&gt;-->
+        <!--            <label>Email</label>-->
+        <!--            <input name="email" type="email" placeholder="">-->
+        <!--            <input name="password" id="password" type="password" placeholder="Password">-->
+        <!--            <input name="cpassword" id="cnf" type="password" placeholder="Confirm Password">-->
+        <!--            <br>-->
+        <!--            <div style="margin-top: 7px;" id="CheckPasswordMatch"></div>-->
+        <!--          <br>-->
+        <!--            <input type="submit"  value="Submit">-->
+        {{ form.as_p }}
+        <button type="submit">Sign up</button>
+      </form>
+      <script>
+        $(document).ready(function () {
+          $("#cnf").on("keyup", function () {
+            var password = $("#password").val();
+            var confirmPassword = $("#cnf").val();
+            if (password != confirmPassword)
+              $("#CheckPasswordMatch")
+                .html("Password does not match !")
+                .css("color", "red");
+            else
+              $("#CheckPasswordMatch")
+                .html("Password matched!")
+                .css("color", "green");
+          });
+        });
+      </script>
+      <p>
+        By clicking the Sign Up button, you agree to our <br />
+        <a href="#">Terms and Conditions</a> and
+        <a href="#">Policy and Privacy</a>
+      </p>
+      <p class="para-2">
+        Already have an account? <a href="Login.html">Login here</a>
+      </p>
     </div>
-
-
-</body>
+  </body>
 </html>
