--- a/quiz_project/static/css/login.css
+++ b/quiz_project/static/css/login.css
@@ -366,3 +366,14 @@ footer .wave#wave4 {
     right: 20px;
   }
 }
+
+/*@media(max-width: 998px)
+{
+  html{
+    font-size: 36px;
+    line-height: 50
+    
+
+  }
+  
+}*/
